# snake-2d-raylib

./: CMakeLists.txt  README.md  vcpkg.json
Framework/: CMakeLists.txt
Framework/Source/: CMakeLists.txt
Framework/Source/Inc/: AppConfig.h  Application.h  Button.h  GameConfig.h  IPhase.h
Framework/Source/Src/: AppConfig.cpp  Application.cpp  Button.cpp  GameConfig.cpp
Game/: CMakeLists.txt
Game/Config/: ContentConfig.yaml  GameConfig.yaml
Game/Source/: ActorManager.cpp  Board.cpp  Board.h  Food.cpp  IManager.inl  Main.cpp  Snake.cpp  Snake.h
Game/Source/Inc/: ActorManager.h  Board.h  ContentConfig.h  Food.h  FoodEatenEffect.h  GameApp.h  GameAssert.h  GameConfig.h  GameInfoPopup.h  GameOverPopup.h  GameStatText.h  IActor.h  IManager.h  IPhase.h  Level.h  MainPhase.h  PhaseManager.h  Score.h  Snake.h  Text.h  TextEffect.h  TitlePhase.h
Game/Source/Src/: ActorManager.cpp  Board.cpp  ContentConfig.cpp  Food.cpp  FoodEatenEffect.cpp  GameApp.cpp  GameConfig.cpp  GameInfoPopup.cpp  GameOverPopup.cpp  GameStatText.cpp  Level.cpp  Main.cpp  MainPhase.cpp  PhaseManager.cpp  Score.cpp  Snake.cpp  Text.cpp  TextEffect.cpp  TitlePhase.cpp
Tools/: Build.bat  Generate.bat
