cmake_minimum_required(VERSION 3.30.3)

set(FRAMEWORK_PROJECT_NAME "Framework")
set(FRAMEWORK_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(FRAMEWORK_SOURCE_PATH "${FRAMEWORK_PROJECT_PATH}/Source")
set(FRAMEWORK_CONFIG_PATH "${FRAMEWORK_PROJECT_PATH}/Config")
set(FRAMEWORK_PROJECT_HEADER_FILE_PATH "${FRAMEWORK_SOURCE_PATH}/Inc")
set(FRAMEWORK_PROJECT_SOURCE_FILE_PATH "${FRAMEWORK_SOURCE_PATH}/Src")

file(GLOB_RECURSE FRAMEWORK_SOURCE "${FRAMEWORK_SOURCE_PATH}/**")
file(GLOB_RECURSE FRAMEWORK_HEADER_FILE "${FRAMEWORK_PROJECT_HEADER_FILE_PATH}/**")
file(GLOB_RECURSE FRAMEWORK_SOURCE_FILE "${FRAMEWORK_PROJECT_SOURCE_FILE_PATH}/**")
file(GLOB_RECURSE FRAMEWORK_CONFIG_FILE "${FRAMEWORK_CONFIG_PATH}/**")

find_path(RAYGUI_INCLUDE_DIRS "raygui.h")

add_library(${FRAMEWORK_PROJECT_NAME} STATIC ${FRAMEWORK_SOURCE} ${FRAMEWORK_HEADER_FILE} ${FRAMEWORK_SOURCE_FILE} ${FRAMEWORK_CONFIG_FILE})
target_include_directories(${FRAMEWORK_PROJECT_NAME} PUBLIC ${FRAMEWORK_PROJECT_HEADER_FILE_PATH} ${FRAMEWORK_PROJECT_SOURCE_FILE_PATH} ${RAYGUI_INCLUDE_DIRS})
target_link_libraries(${FRAMEWORK_PROJECT_NAME} PUBLIC raylib yaml-cpp::yaml-cpp)

target_compile_definitions(
    ${FRAMEWORK_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:RELWITHDEBINFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZEREL_MODE>
)

set_property(TARGET ${FRAMEWORK_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${FRAMEWORK_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

source_group(TREE "${FRAMEWORK_SOURCE_PATH}" PREFIX "Source" FILES ${FRAMEWORK_SOURCE})
source_group(TREE "${FRAMEWORK_CONFIG_PATH}" PREFIX "Config" FILES ${FRAMEWORK_CONFIG_FILE})
source_group(TREE "${FRAMEWORK_PROJECT_HEADER_FILE_PATH}" PREFIX "Source/Inc" FILES ${FRAMEWORK_HEADER_FILE})
source_group(TREE "${FRAMEWORK_PROJECT_SOURCE_FILE_PATH}" PREFIX "Source/Src" FILES ${FRAMEWORK_SOURCE_FILE})