cmake_minimum_required(VERSION 3.30.3)

set(GAME_PROJECT_NAME "Game")
set(GAME_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(GAME_SOURCE_PATH "${GAME_PROJECT_PATH}/Source")

file(GLOB_RECURSE GAME_SOURCE "${GAME_SOURCE_PATH}/**")

add_executable(${GAME_PROJECT_NAME} ${GAME_SOURCE} ${GAME_HEADER_FILE} ${GAME_SOURCE_FILE})
target_include_directories(${GAME_PROJECT_NAME} PUBLIC ${GAME_PROJECT_HEADER_FILE_PATH} ${GAME_PROJECT_SOURCE_FILE_PATH})
target_link_libraries(${GAME_PROJECT_NAME} PUBLIC raylib)

target_compile_definitions(
    ${GAME_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:RELWITHDEBINFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZEREL_MODE>
)

set_property(TARGET ${GAME_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${GAME_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

source_group(TREE "${GAME_SOURCE_PATH}" PREFIX "Source" FILES ${GAME_SOURCE})